Feature admin user listing
 - Create Admin User Listing
 - Add filter method on user service
 - Add local scope whereFilters that checks for equals to value
 - Add local scope whereLikeFilters that check for SQL LIKE "%{$value}%"
 - Test User Listing Test
 - Exception Handling
